Refactor BetterChat initialization and add Filter class for message filtering